# wulin-engine

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  flavor.toml  runseal.toml  rust-toolchain.toml  sidecar.benchmark.toml  sidecar.bootstrap.toml  sidecar.prototype.toml  sidecar.toml
.runseal/: deno.json
.runseal/hooks/: pre-commit
.runseal/support/: actor.ts  camera-relative-terrain.ts  canonical-frame.ts  terrain.ts  (+38 more)
apps/workbench/: Cargo.toml  build.rs
apps/workbench/shaders/: async_resident.hlsl  calibration.hlsl  meshlet_scene.hlsl  occlusion.hlsl  region_load.hlsl  resident_load.hlsl  skeletal_scene.hlsl  surface_resolve.hlsl  terrain.hlsl
apps/workbench/src/: agility_exports.c  async_resident.rs  bootstrap.rs  capture.rs  gpu_capture.rs  input.rs  inspect.rs  load.rs  main.rs  perception.rs  renderer.rs  resident.rs  scene.rs  scene_renderer.rs  window.rs  world.rs
apps/workbench/src/inspect/: app.rs  composition_control.rs  mod.rs  pack_control.rs  protocol.rs  server.rs  status.rs  surface_control.rs  terrain_control.rs  world_control.rs
apps/workbench/src/inspect/app/: actor.rs  objects.rs  retained_body.rs
apps/workbench/src/inspect/protocol/: objects.rs  terrain.rs
apps/workbench/src/rendering/: cooked.rs  device.rs  gpu_capture.rs  load_pipeline.rs  load_renderer.rs  mod.rs  object_id_target.rs  renderer.rs  resident_renderer.rs  resident_resources.rs
apps/workbench/src/rendering/async_resident/: mod.rs  pipeline.rs  renderer.rs  resources.rs  transfer.rs
apps/workbench/src/rendering/async_resident/renderer/: global.rs  payload.rs  status.rs
apps/workbench/src/rendering/async_resident/transfer/: descriptors.rs  lifecycle.rs  payload.rs  status.rs  submit.rs
apps/workbench/src/rendering/calibration/: mod.rs  scene_renderer.rs
apps/workbench/src/rendering/composition/: contact.rs  fixture.rs  global.rs  mod.rs  probe.rs  schedule.rs  state.rs  traversal.rs
apps/workbench/src/rendering/composition/probe/: objects.rs
apps/workbench/src/rendering/composition/traversal/: control.rs  prefetch.rs  rollover.rs
apps/workbench/src/rendering/load/: mod.rs  renderer.rs
apps/workbench/src/rendering/meshlet_scene/: mod.rs  oracle.rs  pipeline.rs  renderer.rs  resources.rs
apps/workbench/src/rendering/meshlet_scene/skeletal/: buffers.rs  mod.rs  oracle.rs  pipeline.rs  probe.rs  renderer.rs  report.rs  resources.rs  surface_bridge.rs
apps/workbench/src/rendering/meshlet_scene/skeletal/surface/: mod.rs  oracle.rs  pipeline.rs  probe.rs  renderer.rs  resources.rs  shadow.rs  targets.rs  upload.rs
apps/workbench/src/rendering/meshlet_scene/skeletal/surface/occlusion/: mod.rs  oracle.rs  probe.rs
apps/workbench/src/rendering/meshlet_scene/skeletal/surface/renderer/: recording.rs
apps/workbench/src/rendering/meshlet_scene/skeletal/surface/resources/: descriptors.rs  mod.rs
apps/workbench/src/rendering/renderer/: frame.rs  mod.rs  modes.rs
apps/workbench/src/rendering/resident/: mod.rs  pipeline.rs  renderer.rs  resources.rs
apps/workbench/src/rendering/terrain/: cache.rs  control.rs  descriptors.rs  lod.rs  mod.rs  pipeline.rs  probe.rs  projection.rs  state.rs  transfer.rs
apps/workbench/src/scene/: camera.rs
apps/workbench/src/streaming/: address.rs  async_resident.rs  mod.rs
apps/workbench/src/streaming/async_resident/: canonical.rs
apps/workbench/src/streaming/cooked/: mod.rs  worker.rs
apps/workbench/src/streaming/objects/: mod.rs  worker.rs
apps/workbench/src/streaming/terrain/: address.rs  mod.rs  worker.rs
apps/workbench/tests/private/: composition_traversal.rs  input.rs
crates/surface-catalog/: Cargo.toml  build.rs
crates/surface-catalog/src/: imported_material.rs  lib.rs
crates/surface-catalog/tests/: catalog.rs
(+648 files in other folders)
