[workspace]
members = [
  "apps/workbench",
  "crates/animation-catalog",
  "crates/meshlet-catalog",
  "crates/region-format",
  "experiments/0001-gpu-lab",
  "tools/region-cooker",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.94"

[workspace.dependencies]
anyhow = "1.0.100"
animation-catalog = { path = "crates/animation-catalog" }
glam = { version = "0.30.9", features = ["serde"] }
meshlet-catalog = { path = "crates/meshlet-catalog" }
png = "0.18.0"
region-format = { path = "crates/region-format" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
windows = "=0.62.2"
