[workspace]
members = [
  "apps/workbench",
  "crates/animation-catalog",
  "crates/canonical-object-fixture",
  "crates/meshlet-catalog",
  "crates/region-format",
  "crates/surface-catalog",
  "crates/terrain-format",
  "experiments/0001-gpu-lab",
  "tools/region-cooker",
  "tools/terrain-cooker",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.94"

[workspace.dependencies]
anyhow = "1.0.100"
animation-catalog = { path = "crates/animation-catalog" }
canonical-object-fixture = { path = "crates/canonical-object-fixture" }
glam = { version = "0.30.9", features = ["serde"] }
gltf = { version = "1.4.1", default-features = false, features = ["names", "utils"] }
meshlet-catalog = { path = "crates/meshlet-catalog" }
meshopt = "0.6.2"
surface-catalog = { path = "crates/surface-catalog" }
terrain-format = { path = "crates/terrain-format" }
png = "0.18.0"
region-format = { path = "crates/region-format" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
windows = "=0.62.2"
