[package]
name = "workbench"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
build = "build.rs"

[dependencies]
anyhow.workspace = true
png.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D12",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
cc = "1.2.57"
