[package]
name = "workbench"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
engine-runtime.workspace = true
png.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
windows = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
] }
