[package]
name = "surface-catalog"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
meshlet-catalog.workspace = true
sha2.workspace = true

[build-dependencies]
gltf.workspace = true
png.workspace = true
sha2.workspace = true
